--- a/core/Vector2.template
+++ b/core/Vector2.template
@@ -12,7 +12,7 @@ namespace gbc
 		{
 		public:
 			Vector2(T newX, T newY)
-				: Vector<T>(2), x(_elements[0]), y(_elements[1])
+				: Vector<T>(2), x(_vectorElements[0]), y(_vectorElements[1])
 			{
 				x = newX;
 				y = newY;
@@ -26,7 +26,7 @@ namespace gbc
 			T &y;
 		
 		protected:
-			using Vector<T>::_elements;
+			using Vector<T>::_vectorElements;
 		};
 	}
 }
