Added new background attribute class.

--- a/core/Makefile
+++ b/core/Makefile
@@ -50,6 +50,9 @@ Frame.o: Frame.cpp
 Tile.o: Tile.cpp
 	$(CC) $(FLAGS) $(CFLAGS) Tile.cpp -o Tile.o
 
+BackgroundAttribute.o: BackgroundAttribute.cpp
+	$(CC) $(FLAGS) $(CFLAGS) BackgroundAttribute.cpp -o BackgroundAttribute.o
+
 cartridges/MMM01.o: cartridges/MMM01.cpp
 	$(CC) $(FLAGS) $(CFLAGS) cartridges/MMM01.cpp -o cartridges/MMM01.o
 
